271_phyluce/error_log.txt
Error during run Abyss:
ERROR_1:
mpicxx -std=c++11 -DHAVE_CONFIG_H -I. -I..   -I/tmp/vsc47063/easybuild/build/ABySS/2.3.7/foss-2023a/abyss-2.3.7      -I/scratch/gent/vo/001/gvo00117/easybuild/RHEL8/cascadelake-amper-12.3.0/include -I/scratch/gent/vo/001/gvo00117/easybuild/RHEL8/cascadelake-ampere-ib/software/OpenMPI/4.1.5-GCC-12.3.0/include -I/scratch/gent/vo/001/gelake-ampere-ib/software/sparsehash/2.0.4-GCCcore-12.3.0/include -I/apps/gent/RHEL8/cascadelake-ib/software/Boost/1.82.0-GCC-12.3.0/include -I/scratch/gRHEL8/cascadelake-ampere-ib/software/FFTW.MPI/3.3.10-gompi-2023a/include -I/apps/gent/RHEL8/cascadelake-ib/software/FlexiBLAS/3.3.1-GCC-12.3.0/include -ib/software/FlexiBLAS/3.3.1-GCC-12.3.0/include/flexiblas -isystem/tmp/vsc47063/easybuild/build/ABySS/2.3.7/foss-2023a/abyss-2.3.7/boost_1_56_0 -Wall -Wedeclarations -fopenmp -I.. -I../Common -I../DataLayer -I../RResolver/btllib/include -O2 -ftree-vectorize -march=native -fno-math-errno -Wno-error=deprect_a-RUtils.Tpo .deps/libralgorithmsshort_a-RUtils.Po
mv -f .deps/libralgorithmsshort_a-RUtils.Tpo .deps/libralgorithmsshort_a-RUtils.Po
In file included from /scratch/gent/vo/001/gvo00117/easybuild/RHEL8/cascadelake-ampere-ib/software/btllib/1.7.0-GCC-12.3.0/include/btllib/nthash.hpp:12,
                 from /scratch/gent/vo/001/gvo00117/easybuild/RHEL8/cascadelake-ampere-ib/software/btllib/1.7.0-GCC-12.3.0/include/btllib/bloom_filter.hpp:4,
                 from BloomFilters.h:4,
                 from RAlgorithmsShort.h:4,
                 from RResolverShort.cpp:7:
/scratch/gent/vo/001/gvo00117/easybuild/RHEL8/cascadelake-ampere-ib/software/btllib/1.7.0-GCC-12.3.0/include/btllib/hashing_internals.hpp:554:11: error:
ilable with -std=c++17 or -std=gnu++17 [-Werror=c++17-extensions]
  554 | constexpr inline uint64_t AA_SEED_A = 0xf56d6192468323df;
      |           ^~~~~~
/scratch/gent/vo/001/gvo00117/easybuild/RHEL8/cascadelake-ampere-ib/software/btllib/1.7.0-GCC-12.3.0/include/btllib/hashing_internals.hpp:555:11: error:
ilable with -std=c++17 or -std=gnu++17 [-Werror=c++17-extensions]
  555 | constexpr inline uint64_t AA_SEED_C = 0x9b0b2fd724e1e1d2;
      |           ^~~~~~
/scratch/gent/vo/001/gvo00117/easybuild/RHEL8/cascadelake-ampere-ib/software/btllib/1.7.0-GCC-12.3.0/include/btllib/hashing_internals.hpp:556:11: error:
ilable with -std=c++17 or -std=gnu++17 [-Werror=c++17-extensions]
  556 | constexpr inline uint64_t AA_SEED_D = 0xe8c583296b03c7af;
.....
mv -f .deps/libralgorithmsshort_a-SequenceTree.Tpo .deps/libralgorithmsshort_a-SequenceTree.Po
cc1plus: all warnings being treated as errors
make[2]: *** [Makefile:555: abyss_rresolver_short-RResolverShort.o] Error 1
make[2]: *** Waiting for unfinished jobs....
cc1plus: all warnings being treated as errors
make[2]: *** [Makefile:499: libralgorithmsshort_a-BloomFilters.o] Error 1
mv -f .deps/abyss_rresolver_short-Contigs.Tpo .deps/abyss_rresolver_short-Contigs.Po
mv -f .deps/libralgorithmsshort_a-Contigs.Tpo .deps/libralgorithmsshort_a-Contigs.Po
cc1plus: all warnings being treated as errors
make[2]: *** [Makefile:485: libralgorithmsshort_a-RAlgorithmsShort.o] Error 1
make[2]: Leaving directory '/tmp/vsc47063/easybuild/build/ABySS/2.3.7/foss-2023a/abyss-2.3.7/RResolver'
make[1]: *** [Makefile:488: all-recursive] Error 1
make[1]: Leaving directory '/tmp/vsc47063/easybuild/build/ABySS/2.3.7/foss-2023a/abyss-2.3.7'
make: *** [Makefile:408: all] Error 2
 (at easybuild/easybuild-framework/easybuild/tools/run.py:682 in parse_cmd_output)